Fixed Logo Banner Main alignment

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -23,6 +23,10 @@
     font-size: 1.8rem;
   }
 
+  #logo-main {
+    width: 60%;
+  }
+
   #showcase #showcase-item-1 {
     background: url('../img/showcase-1-mobile.jpg');
     background-position: center;
@@ -61,12 +65,11 @@
   #rentals-right,
   #service-left,
   #service-right {
-    height: 50vh;
-    /* width: 100%; */
+    height: 60vh;
   }
 
   #sales-right .sales-right-content {
-    height: 50vh;
+    height: 60vh;
   }
 
   #sales-left .sales-left-content {
@@ -97,7 +100,7 @@
 
   .rentals-left-content {
     padding: 0.5rem !important;
-    height: 50vh;
+    height: 60vh;
   }
 
   #rentals-left .rentals-left-content h1 {
@@ -121,7 +124,7 @@
     background: url('../img/rentals-mobile.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 50vh;
+    height: 60vh;
     width: 100%;
   }
 
@@ -146,7 +149,7 @@
   }
 
   #service-right .service-right-content {
-    height: 50vh;
+    height: 60vh;
   }
 
   #service-right .box-icon {
@@ -199,6 +202,6 @@
   }
 
   #footer-content {
-    height: 100vh;
+    height: 100%;
   }
 }
